#91 #93 change from Collection to Map in Hotel
Did this since it will be easier to see if a object was replaced (changed) or added (new)